--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,43 @@
 html {
   height: 100%;
 }
+:root {
+  --bs-body-font-family: 'Lato', sans-serif;
+  --bs-body-font-size: 1rem;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-body-color: #fff;
+  --bs-body-bg: #fffffe;
+  --bs-white-rgb: 255, 255, 255;
+  --dvw: 1vw;
+  --dvh: 1vh;
+  --bs-btn-padding-x: 0.8rem;
+  --bs-btn-padding-y: 0.4rem;
+  --bs-btn-font-size: 1rem;
+  --bs-btn-font-weight: 350;
+  --bs-btn-line-height: 1.4;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #2a5555;
+  --bs-btn-border-width: 1px;
+  --bs-btn-border-radius: 0.35rem;
+  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  --bs-btn-disabled-opacity: 0.65;
+}
+
+body.dark {
+  margin: 0;
+  height: 100%;
+  position: relative;
+  font-family: var(--bs-body-font-family);
+  font-size: var(--bs-body-font-size, 1rem);
+  font-weight: var(--bs-body-font-weight, 400);
+  line-height: var(--bs-body-line-height, 1.5);
+  color: black;
+  background-color: black;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: #000;
+  --the-theme: rgba(255, 255, 255, 0.6)
+}
 
 body {
   margin: 0;
@@ -17,7 +54,9 @@ body {
   background-color: var(--bs-body-bg, #fffffe);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: #000;
+  --the-theme: rgba(0, 0, 0, 0.6)
 }
+
 
 h1 {
   font-size: 2.5rem;
@@ -39,7 +78,7 @@ h1:has(+ h2) {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: var(--the-theme);
   z-index: 0;
   top: 0;
   bottom: 0;
