--- a/css/styles.css
+++ b/css/styles.css
@@ -25,22 +25,9 @@ html {
   --bs-btn-border-radius: 0.35rem;
   --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
+  --the-theme: black;
 }
 
-body.dark {
-  margin: 0;
-  height: 100%;
-  position: relative;
-  font-family: var(--bs-body-font-family);
-  font-size: var(--bs-body-font-size, 1rem);
-  font-weight: var(--bs-body-font-weight, 400);
-  line-height: var(--bs-body-line-height, 1.5);
-  color: black;
-  background-color: black;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: #000;
-  --the-theme: rgba(255, 255, 255, 0.6)
-}
 
 body {
   margin: 0;
@@ -54,7 +41,6 @@ body {
   background-color: var(--bs-body-bg, #fffffe);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: #000;
-  --the-theme: rgba(0, 0, 0, 0.6)
 }
 
 
@@ -85,6 +71,7 @@ h1:has(+ h2) {
   right: 0;
   left: 0;
 }
+
 
 video.bg-video {
   position: fixed;
@@ -140,9 +127,11 @@ video.bg-video {
 
 
 .whitetext {
-  color: var(--bs-white-rgb, #ffffff);
+  color: white;
 }
-
+.black-text {
+  color: black;
+}
 
 @media (max-width: 768px) {
   .maincontent {
